testsuite/tests/generic_interfaces/bad_return/compiled_type/test.out
== foo.lkt ==
foo.lkt:17:5: error: BarNode.prop returns Bool, which does not match return type of Interface.method: Int
17 |     fun prop(): Bool implements Interface.method = true
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
